--- a/src/client/app/components/_Index.css
+++ b/src/client/app/components/_Index.css
@@ -19,5 +19,5 @@
 .pageContent{
   position: relative;
   flex: 1 0 auto;
-  box-shadow: 12px 0 15px -4px rgba(31, 73, 125, 0.8), -12px 0 8px -4px rgba(31, 73, 125, 0.8);
+  box-shadow: 0px 0 8px 0px rgba(0,0,0,0.4), 0px 0 8px 0px rgba(0,0,0,0.4);
 }
